<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Perfect Workout Timer</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="start">Start</string>
    <string name="reset">Reset</string>
    <string name="_0">0</string>
    <string name="_colon">:</string>
    <string name="_00">00</string>
    <string name="increase_time">+\nTime</string>
    <string name="decrease_time">-\nTime</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="menu_edit_alert_type">Edit alert type</string>
    <string name="menu_edit_alert_tone">Edit alert tone</string>
    <string name="menu_edit_time_increments">Edit time increments</string>
    <string name="dialog_edit_time_increments_message">Set the value the timer will be -/+ by</string>
    <string name="dialog_edit_time_increments_title">Time Increments</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="dialog_edit_time_title">Edit time</string>
    <string name="dialot_edit_time_value_minutes">60</string>
    <string name="dialot_edit_time_label_minutes">Minutes</string>
    <string name="dialot_edit_time_label_seconds">Seconds</string>
    <string name="dialot_edit_time_value_seconds">00</string>
    <string name="dialog_edit_alert_type_title">Edit alert type</string>
    <string name="dialog_edit_alert_tone_title">Edit alert tone</string>
    <string name="pause">Pause</string>
    <string name="dialog_edit_time_increments">Time increments</string>
    <string name="app_label">Perfect Workout</string>
    <string name="dialog_edit_time_increments_seconds">seconds</string>
</resources>
