<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="37dp" >

        <TextView
            android:id="@+id/tvMin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_0"
            android:textSize="80sp" />

        <TextView
            android:id="@+id/tvColon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_colon"
            android:textSize="80sp" />

        <TextView
            android:id="@+id/tvSec"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_00"
            android:textSize="80sp"
            android:textStyle="bold" />
    </LinearLayout>

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/linearLayout1"
        android:layout_marginTop="12dp" >

        <Button
            android:id="@+id/btnStart"
            style="@style/ButtonText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center_horizontal"
            android:layout_marginTop="30dp"
            android:background="@drawable/greenbutton"
            android:text="@string/start"
            android:textSize="30sp" />

        <Button
            android:id="@+id/btnReset"
            style="@style/ButtonText"
            android:layout_width="match_parent"
            android:layout_height="57dp"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_marginBottom="57dp"
            android:background="@drawable/purplebutton"
            android:text="@string/reset"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btnDecrease"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center_vertical"
            android:text="@string/decrease_time"
            android:textSize="20sp" 
            android:background="@drawable/redbutton"
            style="@style/ButtonText"/>

        <Button
            android:id="@+id/btnIncrease"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center_vertical"
            android:text="@string/increase_time"
            android:textSize="20sp" 
            android:background="@drawable/yellowbutton"
            style="@style/ButtonText"/>

    </FrameLayout>

</RelativeLayout>